--- a/video.yaml
+++ b/video.yaml
@@ -8,7 +8,7 @@
              start_offset: "00:00",
                end_offset: "00:43",
                   bullets: [
-                "I will come back in this exercise we're",
+                "I will cme back in this exercise we're",
                 "going to make our layout responsive so",
                 "let's start off by opening up terminal",
                 "and I'm going to navigate into the",
